@@ -434,7 +434,7 @@ calculation will be an approximation of $e^{y\ln(x)}$.
 {
 \catcode`\^=7
 
-	Maclaurin series for $e^\textrm{\mvar{x}}$. 
+	Maclaurin series for $e^x$. 
 }	
 \begin{codeexample}[]
 \pgfmathparse{exp(1)} \pgfmathresult
