@@ -1,6 +1,7 @@
 rerun = "(There were undefined references|Rerun to get (cross-references|the bars) right)"
 doc   = pgfmanual
 latex = latex
+TEXINPUTS := ../../text-en:$(TEXINPUTS)
 
 all: $(doc).ps
 
@@ -11,10 +12,11 @@ pgfmanual.ind: pgfmanual.idx
 	makeindex $(doc).idx
 
 pgfmanual.ps: $(doc).tex $(doc).ind 
-	$(latex) $(doc).tex
-	(egrep -q $(rerun) $(doc).log && $(latex) $(doc).tex) || true
+	TEXINPUTS="$(TEXINPUTS)" $(latex) $(doc).tex
+	(egrep -q $(rerun) $(doc).log && TEXINPUTS="$(TEXINPUTS)" $(latex) $(doc).tex) || true
 	dvips -o $(doc).ps $(doc).dvi
 	gs -dNOPAUSE -sDEVICE=pdfwrite -dBATCH -dCompatibilityLevel=1.4 -sOutputFile=$(doc).pdf $(doc).ps
 
 clean:
-	rm -f *.aux *.log *.bbl *.blg *.ps *.dvi *.pdf *.toc *.out *.snm
+	rm -f pgfmanual*.aux pgfmanual.{out,log,idx,ind,ilg,pdf,toc,bbl,blg,ps,dvi}
+
