@@ -7,7 +7,7 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\documentclass{ltxdoc}
+\documentclass[a4paper]{ltxdoc}
 
 % pgf version is defined in \pgfversion in file
 % generic/pgf/utilities/pgfrcs.code.tex 
