@@ -7,7 +7,7 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-postscript.def,v 1.17 2007/12/10 13:19:32 tantau Exp $
+\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-postscript.def,v 1.18 2008/02/07 19:25:41 tantau Exp $
 
 
 % Driver commands for postscript
@@ -253,15 +253,16 @@
     \pgf@xc=-\pgf@xa%
     \pgf@yc=-\pgf@ya%
     \expandafter\xdef\csname @pgfshading#1!\endcsname{%
-      \hbox to\pgf@x{\vbox to\pgf@y{\vfil
+      \hbox to\the\pgf@x{\vbox to\the\pgf@y{\vfil
           \noexpand\pgfsys@beginpurepicture%
           \noexpand\pgfsys@invoke{%
-            1 setlinewidth [] 0 setdash 0 setlinecap
+            \pgf@sys@tonumber{\pgf@xc} \pgf@sys@tonumber{\pgf@yc} translate
+            1.1 setlinewidth [] 0 setdash 0 setlinecap
             /pgfproc {#4} bind def 
             \pgf@sys@tonumber{\pgf@ya} 1 \pgf@sys@tonumber{\pgf@yb}
             {
               \pgf@sys@tonumber{\pgf@xa} 1 \pgf@sys@tonumber{\pgf@xb}
-              { 1 index 2 copy pgfproc setrgbcolor moveto 1 0 rlineto stroke }
+              { 1 index 2 copy pgfproc setrgbcolor moveto 1.1 0 rlineto stroke }
               for 
             }
             for            
