@@ -7,7 +7,7 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-svg.def,v 1.19 2007/06/12 21:23:32 tantau Exp $
+\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-svg.def,v 1.20 2008/02/07 19:25:41 tantau Exp $
 
 
 % Driver commands for svg
@@ -284,8 +284,8 @@
     \expandafter\xdef\csname @pgfshading#1!\endcsname{%
       \def\noexpand\pgf@sys@svg@sh@defs{\noexpand\pgfsysprotocol@literal{\pgf@sys@svg@thestops}}%
       \def\noexpand\pgf@sys@svg@sh{\noexpand\pgfsysprotocol@literal{<rect
-        width="\the\pgf@x"
-        height="\the\pgf@y"
+        width="\pgf@sys@tonumber{\pgf@x}"
+        height="\pgf@sys@tonumber{\pgf@y}"
         style="fill:url(\noexpand\#pgfsh\the\pgf@sys@svg@objectcount);
           stroke:none"/>\noexpand\Hnewline}}%
       \def\noexpand\pgf@sys@svg@pos{\noexpand\pgfpoint{\the\pgf@x}{\the\pgf@y}}%
@@ -293,6 +293,14 @@
   }%
 }
 
+\def\pgfsys@functionalshading#1#2#3#4{%
+  \pgf@sys@fail{functional shadings}%
+  \expandafter\gdef\csname @pgfshading#1!\endcsname{%
+    \let\pgf@sys@svg@sh@defs\relax%
+    \let\pgf@sys@svg@sh\relax%
+    \let\pgf@sys@svg@pos\pgfpointorigin%
+  }%
+}
 
 \def\pgfsys@vertshading#1#2#3{%
   {%
@@ -307,8 +315,8 @@
     \expandafter\xdef\csname @pgfshading#1!\endcsname{%
       \def\noexpand\pgf@sys@svg@sh@defs{\noexpand\pgfsysprotocol@literal{\pgf@sys@svg@thestops}}%
       \def\noexpand\pgf@sys@svg@sh{\noexpand\pgfsysprotocol@literal{<rect
-        width="\the\pgf@y"
-        height="\the\pgf@x"
+        width="\pgf@sys@tonumber{\pgf@y}"
+        height="\pgf@sys@tonumber{\pgf@x}"
         style="fill:url(\noexpand\#pgfsh\the\pgf@sys@svg@objectcount);
           stroke:none"/>\noexpand\Hnewline}}%
       \def\noexpand\pgf@sys@svg@pos{\noexpand\pgfpoint{\the\pgf@y}{\the\pgf@x}}%
@@ -343,9 +351,9 @@
     \expandafter\xdef\csname @pgfshading#1!\endcsname{%
       \def\noexpand\pgf@sys@svg@sh@defs{\noexpand\pgfsysprotocol@literal{\pgf@sys@svg@thestops}}%
       \def\noexpand\pgf@sys@svg@sh{\noexpand\pgfsysprotocol@literal{<circle
-        cx="\the\pgf@xa"
-        cy="\the\pgf@xa"
-        r="\the\pgf@xa"
+        cx="\pgf@sys@tonumber{\pgf@xa}"
+        cy="\pgf@sys@tonumber{\pgf@xa}"
+        r="\pgf@sys@tonumber{\pgf@xa}"
         style="fill:url(\noexpand\#pgfsh\the\pgf@sys@svg@objectcount);
           stroke:none"/>\noexpand\Hnewline}}%
       \def\noexpand\pgf@sys@svg@pos{\noexpand\pgfpoint{\the\pgf@xb}{\the\pgf@xb}}%
